cli/tests/non_utf8_in_exception_msg.ts
throw new Error(new TextDecoder().decode(new Uint8Array([255])));
